<resources>
    <string name="app_name">GreenCityLife</string>
    <string name="facebook_application_id" translatable="false">3655873797756859</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3655873797756859</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="garden_button_text">Market</string>
    <string name="community_button_text">Community</string>
    <string name="mygarden_button_text">My Garden</string>

    <!--Other string resources also defined in this file… -->
    <string name="feedbacktype1">Knowledge</string>
    <string name="feedbacktype2">Practical help</string>
    <string name="feedbacktype3">Goods</string>
    <string name="create_entry">Create Entry</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_description">Enter description</string>
    <string name="offer">Offer</string>
    <string name="welcome">"Hello New Gardener! Please choose a nickname and\n"
                                          "create a new garden or enter an existing one."</string>
</resources>
