<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.market_add">

    <LinearLayout
        style="@style/Widget.AppCompat.Light.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/navbar"
            android:name="com.example.greencitylife.fragment.NavBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/entry_type_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/search_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@android:string/search_go" />

                    <RadioButton
                        android:id="@+id/offer__radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/offer" />

                </RadioGroup>


                <Spinner
                    android:id="@+id/entry_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/fill_form"
                    android:entries="@array/feedbacktypelist"
                    android:gravity="bottom"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/entry_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="Enter title"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/entry_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/enter_description"
                    android:inputType="textPersonName" />

                <!--ImageView where image will be set-->
                <ImageView
                    android:id="@+id/entry_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:paddingBottom="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground" />

                <!--Button to pick image-->
                <Button
                    android:id="@+id/img_pick_btn"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/button_market_clicked"
                    android:text="@string/choose_image" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/create_entry" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>